[workspace]
members = [
	"client/cli",
	"client/consensus/aura",
	"client/consensus/common",
	"client/consensus/relay-chain",
	"client/network",
	"client/pov-recovery",
	"client/service",
	"client/relay-chain-interface",
	"client/relay-chain-inprocess-interface",
	"client/relay-chain-rpc-interface",
	"pallets/aura-ext",
	"pallets/collator-selection",
	"pallets/dmp-queue",
	"pallets/parachain-system",
	"pallets/parachain-system/proc-macro",
	"pallets/session-benchmarking",
	"pallets/xcm",
	"pallets/xcmp-queue",
	"parachain-template/node",
	"parachain-template/runtime",
	"primitives/core",
	"primitives/parachain-inherent",
	"primitives/timestamp",
	"primitives/utility",
	"polkadot-parachain/",
	"parachains/common",
	"parachains/pallets/parachain-info",
	"parachains/pallets/ping",
	"parachains/runtimes/testing/rococo-parachain",
	"parachains/runtimes/starters/shell",
	"parachains/runtimes/starters/seedling",
	"parachains/runtimes/assets/statemint",
	"parachains/runtimes/assets/statemine",
	"parachains/runtimes/assets/westmint",
	"parachains/runtimes/contracts/contracts-rococo",
	"parachains/runtimes/testing/penpal",
	"test/client",
	"test/relay-sproof-builder",
	"test/relay-validation-worker-provider",
	"test/runtime",
	"test/service",
]

[profile.release]
panic = "unwind"
opt-level = 3

[profile.production]
inherits = "release"
lto = true
codegen-units = 1
[patch."https://github.com/paritytech/polkadot"]
polkadot-cli ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-client ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
kusama-runtime ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
kusama-runtime-constants ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-primitives ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-core-primitives ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-parachain ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-runtime-common ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-runtime-parachains ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-runtime-metrics ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
xcm ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
xcm-procedural ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
xcm-executor ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-primitives-test-helpers ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
slot-range-helper ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
pallet-xcm ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
xcm-builder ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
pallet-xcm-benchmarks ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-node-core-parachains-inherent ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
tracing-gum ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
tracing-gum-proc-macro ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-node-jaeger ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-node-primitives ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-erasure-coding ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-node-subsystem ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-node-subsystem-types ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
orchestra ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
prioritized-metered-channel ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
orchestra-proc-macro ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-node-network-protocol ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-statement-table ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-overseer ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-node-metrics ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-test-service ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-rpc ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-service ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-approval-distribution ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-node-subsystem-util ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-node-subsystem-test-helpers ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-availability-bitfield-distribution ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-availability-distribution ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-availability-recovery ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-collator-protocol ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-dispute-distribution ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-gossip-support ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-network-bridge ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-node-collation-generation ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-node-core-approval-voting ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-node-core-av-store ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-node-core-backing ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-node-core-bitfield-signing ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-node-core-candidate-validation ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-node-core-pvf ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
test-parachain-adder ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
test-parachain-halt ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-node-core-chain-api ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-node-core-chain-selection ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-node-core-dispute-coordinator ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-node-core-provisioner ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-node-core-pvf-checker ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-node-core-runtime-api ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-runtime ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-runtime-constants ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-statement-distribution ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
rococo-runtime ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
rococo-runtime-constants ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
westend-runtime ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
westend-runtime-constants ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-test-client ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-test-runtime ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
test-runtime-constants ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-performance-test ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
xcm-executor-integration-tests ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
xcm-simulator ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
xcm-simulator-example ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
xcm-simulator-fuzzer ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-test-malus ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
zombienet-backchannel ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
test-parachains ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
test-parachain-adder-collator ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
test-parachain-undying ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
test-parachain-undying-collator ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
staking-miner ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
remote-ext-tests-bags-list ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot-voter-bags ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
polkadot ={git = "https://github.com/cheme/polkadot-1" ,branch = "ec-mmr-testing" }
[patch."https://github.com/paritytech/substrate"]
node-template ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
frame-benchmarking ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
frame-support ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
frame-support-procedural ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
frame-support-procedural-tools ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
frame-support-procedural-tools-derive ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-arithmetic ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-debug-derive ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-std ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-core ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-core-hashing ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-externalities ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-storage ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-runtime-interface ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-runtime-interface-proc-macro ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-tracing ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-wasm-interface ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-io ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-keystore ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-state-machine ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-panic-handler ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-trie ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-runtime ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-application-crypto ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-api ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-api-proc-macro ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-version ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-core-hashing-proc-macro ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-version-proc-macro ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-test-primitives ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
substrate-test-runtime-client ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sc-block-builder ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sc-client-api ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
substrate-prometheus-endpoint ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sc-executor ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sc-executor-common ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sc-allocator ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-maybe-compressed-blob ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-sandbox ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-serializer ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sc-executor-wasmi ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sc-executor-wasmtime ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sc-runtime-test ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-tasks ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
substrate-wasm-builder ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sc-tracing ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sc-rpc-server ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sc-tracing-proc-macro ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-blockchain ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-consensus ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-inherents ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-database ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-rpc ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
substrate-test-runtime ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
beefy-merkle-tree ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
beefy-primitives ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
frame-system ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
frame-system-rpc-runtime-api ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-babe ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-authorship ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-authorship ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-session ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-timestamp ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-timestamp ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-session ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-staking ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-consensus-babe ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-consensus-slots ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-consensus-vrf ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
frame-election-provider-support ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
frame-election-provider-solution-type ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-npos-elections ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
substrate-test-utils ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
substrate-test-utils-derive ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sc-service ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sc-chain-spec ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sc-chain-spec-derive ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sc-network ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
fork-tree ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sc-consensus ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sc-utils ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sc-network-common ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sc-peerset ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-finality-grandpa ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sc-network-light ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sc-network-sync ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sc-telemetry ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sc-client-db ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sc-state-db ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sc-informant ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sc-transaction-pool-api ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sc-keystore ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sc-offchain ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-offchain ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sc-transaction-pool ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-transaction-pool ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
substrate-test-runtime-transaction-pool ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sc-rpc ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sc-rpc-api ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sc-sysinfo ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-block-builder ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-transaction-storage-proof ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-balances ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-transaction-payment ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-offences ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-staking ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-bags-list ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-staking-reward-curve ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-consensus-aura ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-keyring ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
substrate-test-client ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-runtime-interface-test-wasm ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
frame-benchmarking-cli ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sc-cli ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
node-template-runtime ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
frame-executive ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
frame-system-benchmarking ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
frame-try-runtime ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-aura ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-grandpa ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-randomness-collective-flip ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-sudo ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-template ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-transaction-payment-rpc-runtime-api ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-transaction-payment-rpc ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sc-basic-authorship ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sc-proposer-metrics ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sc-consensus-aura ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sc-consensus-slots ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sc-network-test ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sc-finality-grandpa ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sc-network-gossip ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
substrate-frame-rpc-system ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
try-runtime-cli ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
remote-externalities ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-elections-phragmen ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
substrate-build-script-utils ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
node-bench ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
node-primitives ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
node-runtime ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-alliance ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-collective ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-identity ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-asset-tx-payment ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-assets ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-authority-discovery ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-authority-discovery ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-bounties ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-treasury ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-child-bounties ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-contracts ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-contracts-primitives ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-contracts-proc-macro ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-utility ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-contracts-rpc-runtime-api ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-conviction-voting ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-scheduler ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-preimage ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-democracy ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-election-provider-multi-phase ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-election-provider-support-benchmarking ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-gilt ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-im-online ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-indices ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-lottery ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
frame-support-test ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
frame-support-test-pallet ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-membership ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-mmr ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-mmr-primitives ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-multisig ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-nomination-pools ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-nomination-pools-benchmarking ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-offences-benchmarking ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-proxy ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-ranked-collective ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-recovery ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-referenda ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-remark ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-session-benchmarking ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-society ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-state-trie-migration ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
substrate-state-trie-migration-rpc ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-tips ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-transaction-storage ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-uniques ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-vesting ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-whitelist ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
node-testing ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
node-executor ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
node-cli ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
node-inspect ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
node-rpc ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-contracts-rpc ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-mmr-rpc ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sc-consensus-babe ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sc-consensus-epochs ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sc-consensus-babe-rpc ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sc-finality-grandpa-rpc ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sc-sync-state-rpc ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sc-authority-discovery ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sc-consensus-uncles ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sc-service-test ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
substrate-frame-cli ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
chain-spec-builder ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
subkey ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
beefy-gadget ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
beefy-gadget-rpc ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sc-consensus-manual-seal ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sc-consensus-pow ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-consensus-pow ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-atomic-swap ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-bags-list-fuzzer ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-bags-list-remote-tests ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-beefy ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-beefy-mmr ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
frame-election-solution-type-fuzzer ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-example-basic ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-example-offchain-worker ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-example-parallel ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-nicks ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-node-authorization ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-nomination-pools-test-staking ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-scored-pool ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
pallet-staking-reward-fn ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
frame-support-test-compile-pass ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-api-test ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-application-crypto-test ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-arithmetic-fuzzer ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-npos-elections-fuzzer ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-runtime-interface-test ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
sp-runtime-interface-test-wasm-deprecated ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
substrate-test-utils-test-crate ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
substrate-frame-rpc-support ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
generate-bags ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }
node-runtime-generate-bags ={git = "https://github.com/cheme/substrate" ,branch = "ec-mmr-testing" }


[patch.crates-io]
trie-db = { git = "https://github.com/cheme/trie", branch = "size_parent_node" }
trie-bench = { git = "https://github.com/cheme/trie", branch = "size_parent_node" }
hash-db = { git = "https://github.com/cheme/trie", branch = "size_parent_node" }

