[package]
name = "cumulus-test-runtime"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
build = "build.rs"

[dependencies]
runtime = { package = "cumulus-runtime", path = "../../runtime", default-features = false }
substrate-test-runtime = { git = "https://github.com/cheme/substrate", default-features = false, branch = "ecr-cumulus-branch" }

[build-dependencies]
wasm-builder-runner = { git = "https://github.com/cheme/substrate", branch = "ecr-cumulus-branch", package = "substrate-wasm-builder-runner" }

[features]
default = ["std"]
std = [
	"runtime/std",
	"substrate-test-runtime/std",
]
no_std = [
	"runtime/no_std",
	"substrate-test-runtime/no_std",
]
